<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.WelcomeFragment">


    <!--    LinearLayout is used because all views are above each other
        and the layout is very simple, so there is no need to use constraintLayout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:adjustViewBounds="true"
            android:src="@drawable/welcome" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/akaya_telivigala"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="64sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="-24dp"
            android:gravity="center"
            android:text="@string/join_us_amp_enjoy_a_fantastic_shoe_shopping_experience"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:background="@drawable/background_rounded"
            android:paddingHorizontal="48dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>
</layout>