<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.LoginFragment">


    <!--    ConstraintLayout is used to avoid nested views and to maintain a flat hierarchy because the layout was complex-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha=".5"
            android:background="@drawable/bg1" />

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="24dp"
            android:adjustViewBounds="true"
            android:elevation="4dp"
            android:src="@drawable/app_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_logo" />

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/background_rounded"
            android:elevation="4dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/email_text"
            app:layout_constraintTop_toBottomOf="@id/email_text" />

        <TextView
            android:id="@+id/password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/background_rounded"
            android:elevation="4dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/password_text"
            app:layout_constraintTop_toBottomOf="@id/password_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/background_rounded"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="15dp"
            app:layout_constraintTop_toBottomOf="@id/password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/background_rounded"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="@color/dark"
            app:cornerRadius="15dp"
            app:layout_constraintTop_toBottomOf="@id/login" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>